[BUG #7140] qx.ui.mobile.layout.VBox and HBox align broken in 2.2

--- a/framework/source/resource/qx/mobile/css/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios.css
@@ -155,8 +155,9 @@ input::-webkit-inner-spin-button {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-.hbox, .selectbox, .toolbar-button {
-  width: 100%; }
+@-moz-document url-prefix() {
+  .hbox, .selectbox, .toolbar-button {
+    width: 100%; } }
 
 .vbox {
   width: 100%;
