--- a/framework/source/resource/qx/mobile/scss/common/_layout.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_layout.scss
@@ -28,15 +28,17 @@
 }
 
 // Firefox only
-.hbox {
-  // -moz-box elements shrink-wrap by default. The spec states that "a block-level
-  // box placed inside a block level element is positioned and sized as if it were
-  // any other block". This is not true for the (non-standard) implementation in
-  // Firefox.
-  //
-  // See https://bugzilla.mozilla.org/show_bug.cgi?id=625694
-  //
-  width: 100%;
+@-moz-document url-prefix() {
+  .hbox {
+    // -moz-box elements shrink-wrap by default. The spec states that "a block-level
+    // box placed inside a block level element is positioned and sized as if it were
+    // any other block". This is not true for the (non-standard) implementation in
+    // Firefox.
+    //
+    // See https://bugzilla.mozilla.org/show_bug.cgi?id=625694
+    //
+    width: 100%;
+  }
 }
 
 .vbox { 
